# mysh

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  mysh  watch-and-rebuild.sh
include/: builtins.h  environment.h  minishell.h  prompt.h  utils.h
include/utils/: memory.h  utils.h
lib/node/: Makefile
lib/node/include/: node.h
lib/node/src/: node.c
src/: commands.c  environment.c  initialization.c  main.c  minishell.c  pipes.c  prompt.c  utils.c
src/builtins/: cd.c  env.c  exit.c  setenv.c  unsetenv.c
src/utils/: memory.c  utils.c
